tests/NormalTests/paczka1/fuzzy1/42902180.err
Error in line 1: Oy7 A303 252,2
Error in line 25: 4330Mh A176 ^0,7
Error in line 24: HAl A303 63,6
